# clawbang

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: in-bash.sh  in-rust.rs
src/: main.rs
