[package]
name = "clawbang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
toml = "0.5.8"
sha2 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
subprocess = "0.2.8"
clap = { version = "3.1.2", features = ["derive", "unicode", "env"] }
eyre = "0.6.6"
cacache = "9.0.0"
