[package]
name = "clawbang"
version = "1.0.0"
edition = "2021"
description = "A shebang executable to let you embed rust in bash or standalone files"
license = "MIT"
homepage = "https://github.com/chrisdickinson/clawbang"
repository = "https://github.com/chrisdickinson/clawbang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
toml = "0.5.8"
sha2 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
subprocess = "0.2.8"
clap = { version = "3.1.2", features = ["derive", "unicode", "env"] }
eyre = "0.6.6"
cacache = "9.0.0"
